--- a/templates/layout/layout.gohtml
+++ b/templates/layout/layout.gohtml
@@ -1,24 +1,25 @@
 {{ define "layout"}}
-<!doctype html>
-<html lang="">
-<head>
-    <title>Contact App</title>
-    <script src="/static/js/htmx-1.9.6.js"></script>
+    <!doctype html>
+    <html lang="en">
+    <head>
+        <title>Contact App</title>
+        <link rel="stylesheet" href="/static/site.css">
+        <link rel="stylesheet" href="https://unpkg.com/missing.css@1.1.1">
+        <script src="/static/js/htmx-1.9.6.js"></script>
+        <script src="/static/js/_hyperscript-0.9.11.min.js"></script>
+        <script src="/static/js/rsjs-menu.js" type="module"></script>
+        <script defer src="https://unpkg.com/alpinejs@3/dist/cdn.min.js"></script>
     </head>
-<body hx-boost="true">
-<main>
-    <header>
-        <h1>
-            <all-caps>contacts.app</all-caps>
-            <sub-title>A Demo Contacts Application</sub-title>
-        </h1>
-    </header>
-    {{ template "content" .}}
-</main>
-</body>
-</html>
-{{ end }}
-
-{{ define "content"}}
-    <h1>FPO</h1>
+    <body hx-boost="true">
+    <main>
+        <header>
+            <h1>
+                <span class="allcaps">contacts.app</span>
+                <sub-title>A Demo Contacts Application</sub-title>
+            </h1>
+        </header>
+        {{ template "content" .}}
+    </main>
+    </body>
+    </html>
 {{ end }}
