Added Flash and sorted contacts

--- a/templates/layout/layout.gohtml
+++ b/templates/layout/layout.gohtml
@@ -18,6 +18,10 @@
                 <sub-title>A Demo Contacts Application</sub-title>
             </h1>
         </header>
+
+        {{ with .Flash }}
+        <div class="flash">{{ . }}</div>
+        {{ end }}
         {{ template "content" .}}
     </main>
     </body>
