web 1.0 complete EXCEPT the flash feature isn't working properly and it's driving me nuts so I'm going to swithc to gorilla's implementation

--- a/templates/layout/layout.gohtml
+++ b/templates/layout/layout.gohtml
@@ -3,14 +3,10 @@
     <html lang="en">
     <head>
         <title>Contact App</title>
+        <link rel="icon" href="data:;base64,=">
         <link rel="stylesheet" href="/static/site.css">
-        <link rel="stylesheet" href="https://unpkg.com/missing.css@1.1.1">
-        <script src="/static/js/htmx-1.9.6.js"></script>
-        <script src="/static/js/_hyperscript-0.9.11.min.js"></script>
-        <script src="/static/js/rsjs-menu.js" type="module"></script>
-        <script defer src="https://unpkg.com/alpinejs@3/dist/cdn.min.js"></script>
+        <link rel="stylesheet" href="https://unpkg.com/missing.css@1.1.1/dist/missing.min.css">
     </head>
-    <body hx-boost="true">
     <main>
         <header>
             <h1>
@@ -20,7 +16,7 @@
         </header>
 
         {{ with .Flash }}
-        <div class="flash">{{ . }}</div>
+            <div class="flash">{{ . }}</div>
         {{ end }}
         {{ template "content" .}}
     </main>
