--- a/templates/contacts/edit.gohtml
+++ b/templates/contacts/edit.gohtml
@@ -5,30 +5,45 @@
                 <legend>Contact Values</legend>
                 <p>
                     <label for="email">Email</label>
-                    <input name="email" id="email" type="email" placeholder="Email" value="{{ .Contact.Email }}">
-                    <span class="error">{{ .Errors.email }}</span>
+                    <input name="email"
+                           id="email"
+                           type="email"
+                           placeholder="Email"
+                           value="{{ .Contact.Email }}">
+                    <span class="error">{{ .Errors.Email }}</span>
                 </p>
                 <p>
                     <label for="first_name">First Name</label>
-                    <input name="first_name" id="first_name" type="text" placeholder="First Name"
+                    <input name="first_name"
+                           id="first_name"
+                           type="text"
+                           placeholder="First Name"
                            value="{{ .Contact.First }}">
-                    <span class="error">{{ .Errors.first }}</span>
+                    <span class="error">{{ .Errors.First }}</span>
                 </p>
                 <p>
                     <label for="last_name">Last Name</label>
-                    <input name="last_name" id="last_name" type="text" placeholder="Last Name"
+                    <input name="last_name"
+                           id="last_name"
+                           type="text"
+                           placeholder="Last Name"
                            value="{{ .Contact.Last }}">
-                    <span class="error">{{ .Errors.last }}</span>
+                    <span class="error">{{ .Errors.Last }}</span>
                 </p>
                 <p>
                     <label for="phone">Phone</label>
-                    <input name="phone" id="phone" type="text" placeholder="Phone" value="{{ .Contact.Phone }}">
-                    <span class="error">{{ .Errors.phone }}</span>
+                    <input name="phone"
+                           id="phone"
+                           type="text"
+                           placeholder="Phone"
+                           value="{{ .Contact.Phone }}">
+                    <span class="error">{{ .Errors.Phone }}</span>
                 </p>
                 <button>Save</button>
             </fieldset>
         </form>
-        <form action="/contacts/{{ .Contact.Id }}/delete" method="post">
+        <form action="/contacts/{{ .Contact.Id }}/delete"
+              method="post">
             <button>Delete Contact</button>
         </form>
         <p>
