--- a/templates/contacts/new.gohtml
+++ b/templates/contacts/new.gohtml
@@ -1,33 +1,49 @@
 {{ define "content" }}
-    <form action="/contacts/new" method="post">
-        <fieldset>
-            <legend>Contact Values</legend>
-            <p>
-                <label for="email">Email</label>
-                <input name="email" id="email" type="email" placeholder="Email" value="{{ .Data.Contact.Email }}">
-                <span class="error">{{ .Data.Errors.email }}</span>
-            </p>
-            <p>
-                <label for="first_name">First Name</label>
-                <input name="first_name" id="first_name" type="text" placeholder="First Name"
-                       value="{{ .Data.Contact.First }}">
-                <span class="error">{{ .Data.Errors.first }}</span>
-            </p>
-            <p>
-                <label for="last_name">Last Name</label>
-                <input name="last_name" id="last_name" type="text" placeholder="Last Name"
-                       value="{{ .Data.Contact.Last }}">
-                <span class="error">{{ .Data.Errors.last }}</span>
-            </p>
-            <p>
-                <label for="phone">Phone</label>
-                <input name="phone" id="phone" type="text" placeholder="Phone" value="{{ .Data.Contact.Phone }}">
-                <span class="error">{{ .Data.Errors.phone }}</span>
-            </p>
-            <button>Save</button>
-        </fieldset>
-    </form>
-    <p>
-        <a href="/contacts">Back</a>
-    </p>
+    {{ with .Data }}
+        <form action="/contacts/new" method="post">
+            <fieldset>
+                <legend>Contact Values</legend>
+                <p>
+                    <label for="email">Email</label>
+                    <input name="email"
+                           id="email"
+                           type="email"
+                           placeholder="Email"
+                           value="{{ .Contact.Email }}">
+                    <span class="error">{{ .Errors.Email }}</span>
+                </p>
+                <p>
+                    <label for="first_name">First Name</label>
+                    <input name="first_name"
+                           id="first_name"
+                           type="text"
+                           placeholder="First Name"
+                           value="{{ .Contact.First }}">
+                    <span class="error">{{ .Errors.First }}</span>
+                </p>
+                <p>
+                    <label for="last_name">Last Name</label>
+                    <input name="last_name"
+                           id="last_name"
+                           type="text"
+                           placeholder="Last Name"
+                           value="{{ .Contact.Last }}">
+                    <span class="error">{{ .Errors.Last }}</span>
+                </p>
+                <p>
+                    <label for="phone">Phone</label>
+                    <input name="phone"
+                           id="phone"
+                           type="text"
+                           placeholder="Phone"
+                           value="{{ .Contact.Phone }}">
+                    <span class="error">{{ .Errors.Phone }}</span>
+                </p>
+                <button>Save</button>
+            </fieldset>
+        </form>
+        <p>
+            <a href="/contacts">Back</a>
+        </p>
+    {{ end }}
 {{ end }}
