--- a/templates/layout/layout.gohtml
+++ b/templates/layout/layout.gohtml
@@ -2,8 +2,7 @@
     <!doctype html>
     <html lang="en">
     <head>
-        <title>Contact App</title>
-        <link rel="icon" href="data:;base64,=">
+        <title>&lt;/&gt; Contacts.App - Web 1.0</title>
         <link rel="stylesheet" href="/static/site.css">
         <link rel="stylesheet" href="https://unpkg.com/missing.css@1.1.1/dist/missing.min.css">
     </head>
