Added missing <body> open tag, and added missing-1.1.1.css to static directory

--- a/templates/layout/layout.gohtml
+++ b/templates/layout/layout.gohtml
@@ -4,8 +4,9 @@
     <head>
         <title>&lt;/&gt; Contacts.App - Web 1.0</title>
         <link rel="stylesheet" href="/static/site.css">
-        <link rel="stylesheet" href="https://unpkg.com/missing.css@1.1.1/dist/missing.min.css">
+        <link rel="stylesheet" href="/static/missing-1.1.1.min.css">
     </head>
+    <body>
     <main>
         <header>
             <h1>
