--- a/templates/contacts/edit.gohtml
+++ b/templates/contacts/edit.gohtml
@@ -8,6 +8,9 @@
                     <input name="email"
                            id="email"
                            type="email"
+                           hx-get="/contacts/{{ .Contact.Id }}/email"
+                           hx-target="next .error"
+                           hx-trigger="change, keyup delay:200ms changed"
                            placeholder="Email"
                            value="{{ .Contact.Email }}">
                     <span class="error">{{ .Errors.Email }}</span>
@@ -42,10 +45,11 @@
                 <button>Save</button>
             </fieldset>
         </form>
-        <form action="/contacts/{{ .Contact.Id }}/delete"
-              method="post">
-            <button>Delete Contact</button>
-        </form>
+        <button hx-target="body"
+                hx-push-url="true"
+                hx-confirm="Are you sure you want to delete this contact?"
+                hx-delete="/contacts/{{ .Contact.Id }}">Delete Contact
+        </button>
         <p>
             <a href="/contacts">Back</a>
         </p>
