--- a/templates/contacts/index.gohtml
+++ b/templates/contacts/index.gohtml
@@ -1,17 +1,18 @@
 {{ define "content"}}
-<form action="/contacts"
-      method="get"
-      class="tool-bar">
-    <label for="search">Search Term</label>
-    <input id="search"
-           type="search"
-           name="q"
-           value="{{ .Data.Query }}"
-           hx-get="/contacts"
-           hx-trigger="search, keyup delay:200ms changed"
-           hx-target="tbody"/>
-    <input type="submit"
-           value="Search"/>
+    <form action="/contacts"
+          method="get"
+          class="tool-bar">
+        <label for="search">Search Term</label>
+        <input id="search"
+               type="search"
+               name="q"
+               value="{{ .Data.Query }}"
+               hx-get="/contacts"
+               hx-trigger="search, keyup delay:200ms changed"
+               hx-target="tbody"
+               hx-push-url="true"/>
+        <input type="submit"
+               value="Search"/>
     </form>
     <table>
         <thead>
