--- a/templates/contacts/index.gohtml
+++ b/templates/contacts/index.gohtml
@@ -50,5 +50,11 @@
     </table>
     <p>
         <a href="/contacts/new">Add Contact</a>
+        <span hx-get="/contacts/count"
+              hx-trigger="revealed">
+            <img id="spinner"
+                 class="htmx-indicator"
+                 src="/static/img/spinning-circles.svg"/>
+        </span>
     </p>
 {{ end }}
