--- a/templates/contacts/rows.gohtml
+++ b/templates/contacts/rows.gohtml
@@ -10,6 +10,7 @@
                 <a href="/contacts/{{ .Id }}">View</a>
                 <a href="#"
                    hx-delete="/contacts/{{ .Id }}"
+                   hx-swap="outerHTML swap:1s"
                    hx-confirm="Are you sure you want to delete this contact?"
                    hx-target="closest tr">Delete</a>
             </td>
