Archiver singleton working for progressbar

--- a/templates/contacts/index.gohtml
+++ b/templates/contacts/index.gohtml
@@ -1,4 +1,6 @@
 {{ define "content"}}
+
+    {{ template "archive_ui" .Data.Archiver }}
     <form action="/contacts"
           method="get"
           class="tool-bar">
