Archive reset implementation.

--- a/templates/contacts/archive_ui.gohtml
+++ b/templates/contacts/archive_ui.gohtml
@@ -11,7 +11,8 @@
                  hx-trigger="load delay:500ms">
                 Creating Archive...
                 <div class="progress">
-                    <div class="progress-bar"
+                    <div id="archive-progress"
+                         class="progress-bar"
                          role="progressbar"
                          aria-valuenow="{{ .ProgressPercent }}"
                          style="width: {{ .ProgressPercent }}%"></div>
@@ -20,8 +21,9 @@
         {{ else if eq .Status "Complete" }}
             <a hx-boost="false"
                href="/contacts/archive/file">
-                Archive Ready!  Click here to download. &downarrow;
+                Archive Ready! Click here to download. &downarrow;
             </a>
+            <button hx-delete="/contacts/archive">Clear Download</button>
         {{ end }}
     </div>
 {{ end }}
