Implemented and commented out the auto download UI using hyperscript

--- a/templates/contacts/archive_ui.gohtml
+++ b/templates/contacts/archive_ui.gohtml
@@ -23,7 +23,12 @@
                href="/contacts/archive/file">
                 Archive Ready! Click here to download. &downarrow;
             </a>
-            <button hx-delete="/contacts/archive">Clear Download</button>
+            {{/*            <a hx-boost="false"*/}}
+            {{/*               href="/contacts/archive/file"*/}}
+            {{/*               _="on load click() me">*/}}
+            {{/*                Archive Downloading! Click here if the download does not start.*/}}
+            {{/*            </a>*/}}
+            {{/*            <button hx-delete="/contacts/archive">Clear Download</button>*/}}
         {{ end }}
     </div>
 {{ end }}
