--- a/templates/layout/layout.gohtml
+++ b/templates/layout/layout.gohtml
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="/static/site.css">
         <link rel="stylesheet" href="/static/missing-1.1.1.min.css">
         <script src="/static/js/htmx-1.9.6.min.js"></script>
+        <script src="/static/js/_hyperscript-0.9.12.min.js"></script>
     </head>
     <body hx-boost="true">
     <main>
