--- a/templates/contacts/rows.gohtml
+++ b/templates/contacts/rows.gohtml
@@ -9,13 +9,20 @@
             <td>{{ .Phone }}</td>
             <td>{{ .Email }}</td>
             <td>
-                <a href="/contacts/{{ .Id }}/edit">Edit</a>
-                <a href="/contacts/{{ .Id }}">View</a>
-                <a href="#"
-                   hx-delete="/contacts/{{ .Id }}"
-                   hx-swap="outerHTML swap:1s"
-                   hx-confirm="Are you sure you want to delete this contact?"
-                   hx-target="closest tr">Delete</a>
+                <div data-overflow-menu>
+                    <button type="button" aria-haspopup="menu"
+                            aria-controls="contact-menu-{{ .Id }}"
+                    >Options</button>
+                    <div role="menu" hidden id="contact-menu-{{ .Id }}">
+                        <a role="menuitem" href="/contacts/{{ .Id }}/edit">Edit</a>
+                        <a role="menuitem" href="/contacts/{{ .Id }}">View</a>
+                        <a role="menuitem" href="#"
+                           hx-delete="/contacts/{{ .Id }}"
+                           hx-confirm="Are you sure you want to delete this contact?"
+                           hx-swap="outerHTML swap:1s"
+                           hx-target="closest tr">Delete</a>
+                    </div>
+                </div>
             </td>
         </tr>
     {{ end }}
