--- a/templates/contacts/rows.gohtml
+++ b/templates/contacts/rows.gohtml
@@ -3,7 +3,8 @@
         <tr>
             <td><input type="checkbox"
                        name="selected_contact_ids"
-                       value="{{ .Id }}"></td>
+                       value="{{ .Id }}"
+                       x-model="selected"></td>
             <td>{{ .First }}</td>
             <td>{{ .Last }}</td>
             <td>{{ .Phone }}</td>
