--- a/templates/layout/layout.gohtml
+++ b/templates/layout/layout.gohtml
@@ -8,6 +8,7 @@
         <script src="/static/js/htmx-1.9.6.min.js"></script>
         <script src="/static/js/_hyperscript-0.9.12.min.js"></script>
         <script src="/static/js/rsjs-menu.js"></script>
+        <script src="/static/js/alpinejs-3.13.2.min.js"></script>
     </head>
     <body hx-boost="true">
     <main>
